--- a/Project.css
+++ b/Project.css
@@ -4,11 +4,20 @@ head{
 }
 
 body{
-    background-color: bisque;
+    background-color: rgb(219, 128, 16);
+    text-align: center;
+    border-style: solid;
+    border-width: solid;
     align-items: center;
+    margin-top: 100px;
+    margin-right: 100px;
+    margin-bottom: 5%;
+    margin-left: 100px;
 }
 
 button{
-    color: blue;
-   align-self: center;    
+    display: inline-block;
+    color: black;
+   align-self: center; 
+   padding: 10px;   
 }
